force-app/main/default/objects/Feed__c/Feed__c.object-meta.xml
<CustomObject>
    <label>Feed</label>
    <nameField>
        <label>Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>