force-app/main/default/objects/Feed__c/fields/number_of_comments__c.field-meta.xml
<CustomField>
    <fullName>number_of_comments__c</fullName>
    <label>number of comments</label>
    <summaryForeignKey>Comment__c.Feed__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>