force-app/main/default/objects/Feed__c/fields/Number_Of_Likes__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Likes__c</fullName>
    <label>Number Of Likes</label>
    <summaryForeignKey>Like__c.Feed__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>