force-app/main/default/objects/Feed__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feeds</relationshipLabel>
    <relationshipName>Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>